--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ logging.level.org.hibernate.SQL=debug
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
  
 #If want to see very extensive logging
 #spring.jpa.properties.hibernate.generate_statistics=true
@@ -24,3 +24,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #logging.level.org.hibernate.stat=debug
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+spring.jackson.serialization.fail-on-empty-beans=false
+
+
