--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,13 @@ spring.jackson.serialization.fail-on-empty-beans=false
 scheduler.enabled=true
 price.interval=PT02S
 interval-in-cron=0 * * * * *
+
+# flyway configuration
+spring.flyway.enabled=true
+# we can provide a comma-separated list of one or more classpath: or filesystem: locations
+spring.flyway.locations=classpath:db/migration,filesystem:/another/migration/directory
+# used if database has already some tables
+spring.flyway.baseline-on-migrate=true
+
+# actuator
+management.endpoints.web.exposure.include=*
