--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 	<description>Books project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<aws-java-sdk.version>1.11.750</aws-java-sdk.version>
+		<google-cloud-storage>2.3.0</google-cloud-storage>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -81,6 +83,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		
+		<dependency>
+		<groupId>com.amazonaws</groupId>
+		<artifactId>aws-java-sdk-s3</artifactId>
+		<version>${aws-java-sdk.version}</version>
+		</dependency>
+		<dependency>
+		<groupId>com.google.cloud</groupId>
+		<artifactId>google-cloud-storage</artifactId>
+		<version>${google-cloud-storage}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -88,6 +101,16 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>appengine-maven-plugin</artifactId>
+				<version>2.3.0</version>
+				<configuration>
+					<version>1</version>
+					<projectId>GCLOUD_CONFIG</projectId>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
