--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,3 +49,19 @@ spring.flyway.baseline-on-migrate=true
 
 # actuator
 management.endpoints.web.exposure.include=*
+
+
+#fille properties
+# enable multipart uplaods
+spring.servlet.multipart.enabled=true
+# threshold after  files have been written to disk
+spring.servlet.multipart.file-size-threshold=2KB
+# max file size
+spring.servlet.multipart.max-file-size=200MB
+# max request size
+spring.servlet.multipart.max-request-size=215MB
+
+# all files uploaded through  this rest api will be stored in this directory
+#file.upload-dir=/home/media/upload
+file.upload.base-path=C:\Users\princ\Desktop\projects\book\
+
