editing application.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,3 +65,12 @@ spring.servlet.multipart.max-request-size=215MB
 #file.upload-dir=/home/media/upload
 file.upload.base-path=C:\Users\princ\Desktop\projects\book\
 
+# exposing cdn server to access files via url
+# add this line to tomcat/conf/server.xml
+# 		<Context docBase="C:\Users\princ\Desktop\projects\book\" path="/uploads" />
+# // docBase: files path on server - path = url exp : localhost:8080/uploads/filename.txt
+# before this :
+#       </Host>
+#    </Engine>
+#  </Service>
+#</Server>
