OpenApi, swagger, SpringDoc and RestTemplate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,3 +74,24 @@ file.upload.base-path=C:\Users\princ\Desktop\projects\book\
 #    </Engine>
 #  </Service>
 #</Server>
+
+
+# swagger doc
+# default path : /v3/api-docs/ and /swagger-ui/index.html
+# custom path
+#springdoc.api-docs.path=/api-docs
+#springdoc.swagger-ui.path=swagger-ui-custom.html
+springdoc.swagger-ui.operations-sorter=method
+#disabling the /v3/api-docs endpoint
+#springdoc.api-docs.enabled=false
+#disabling the swagger ui
+#spring-doc.swagger-ui.enabled=false
+#package to include
+#springdoc.packages-to-scan=com.global.book.controller, com.another.package
+#paths to include
+#springdoc.paths-to-match=/book, api/author/**
+
+application-description=Book APIs
+application-version=1.3
+
+logging.level.org.springframework.web=debug
