--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 #logging.logback.rollingpolicy.max-history=5
 
 scheduler.enabled=true
-price.interval=PT02S
+price.interval=PT02000S
 interval-in-cron=0 * * * * *
 
 # flyway configuration
@@ -95,3 +95,10 @@ application-description=Book APIs
 application-version=1.3
 
 logging.level.org.springframework.web=debug
+
+#Caching: Redis Configuration
+#spring.cache.type=redis
+#spring.redis.host=localhost
+#spring.redis.port=6379
+#spring.data.redis.repositories.enabled=false
+
